--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "date-fns": "^3.3.1",
     "lucide-react": "^0.330.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-magic-motion": "^1.1.2",
+    "sonner": "^1.4.0"
   },
   "devDependencies": {
+    "@types/dom-speech-recognition": "^0.0.4",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
